--- a/FinalProject-2.vcxproj
+++ b/FinalProject-2.vcxproj
@@ -208,6 +208,7 @@
     <ClCompile Include="FinalProject-2.cpp" />
     <ClCompile Include="IngameClient.cpp" />
     <ClCompile Include="IngameServer.cpp" />
+    <ClCompile Include="UI.cpp" />
     <ClCompile Include="WaitingClient.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
