--- a/FinalProject-2.vcxproj.filters
+++ b/FinalProject-2.vcxproj.filters
@@ -293,6 +293,15 @@
     <ClCompile Include="UI.cpp">
       <Filter>소스 파일\Object\UI</Filter>
     </ClCompile>
+    <ClCompile Include="MainMenuStage.cpp">
+      <Filter>소스 파일\Stage</Filter>
+    </ClCompile>
+    <ClCompile Include="ChooseMenuStage.cpp">
+      <Filter>소스 파일\Stage</Filter>
+    </ClCompile>
+    <ClCompile Include="WaitingRoomStage.cpp">
+      <Filter>소스 파일\Stage</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="FinalProject-2.rc">
